# pyebur128

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
pyebur128/: meter.py  wrap.py
src/pyebur128/: __init__.py  meter.py
tests/: test_loudness.py
