[build-system]
requires = ["setuptools>=61.0", "scikit-build", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "pyebur128"
version = "0.1.0"
description = "Python wrapper for libebur128 with streaming support"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

dependencies = [
    "cffi>=1.17.1",
    "soundfile>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyebur128"
Repository = "https://github.com/yourusername/pyebur128"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

