[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.14",
    "ninja",
    "pybind11>=2.12"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyebur128"
version = "0.1.0"
description = "Python wrapper for libebur128 with streaming support"
authors = [
  { name = "Matt Hosack", email = "hosack.matt@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "cffi",
  "soundfile",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyebur128*"]
exclude = ["external*", "tests*", "docs*"]

